更新： 手动爬虫

--- a/video-info-scraper/popup.html
+++ b/video-info-scraper/popup.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  </meta>
   <title>Video Info Scraper</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -10,6 +12,7 @@
   <h1>Video Info Scraper</h1>
   <button id="scrapeButton">Scrape</button>
   <button id="downloadButton">Download JSON</button>
+  <button id="clearButton">Clear Storage</button>
   <div id="resultDiv"></div>
   <script src="popup.js"></script>
 </body>
